--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <td>6</td>
           <td>A1</td>
           <td>A1 10-6 院會出席整理</td>
-          <td>WIP</td>
+          <td><a href="./A1_10-6.html" target="_blank">A1_10-6</a></td>
         </tr>
         <tr>
           <td>10</td>
