Add table-sm to make table more compact

--- a/A1_10-6.html
+++ b/A1_10-6.html
@@ -11,7 +11,7 @@
   <h3 align="center">A1 10-6 院會出席整理</h1>
   <hr>
   <div class="container table-responsive">
-    <table id="A1" class="table table-hover table-bordered nowrap" align="center">
+    <table id="A1" class="table table-bordered table-hover table-sm nowrap" align="center">
       <thead>
         <tr>
           <th>委員會</th>
