--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h6 align="center">Various statistics of legislators evaluation from Citizen Congress Watch powered by <a href="https://ly.govapi.tw">ly.govapi.tw</a></h6>
   <hr>
   <div class="container table-responsive">
-    <table id="index" class="table table-hover table-bordered nowrap" align="center">
+    <table id="index" class="table table-bordered table-hover table-sm nowrap" align="center">
       <thead>
         <tr>
           <th>屆期</th>
