Add custom css to align thead and tbody; Add thead

--- a/A1_10-6.html
+++ b/A1_10-6.html
@@ -4,19 +4,86 @@
   <meta charset="utf-8">
   <title>ccw-assess</title>
   <link href="./css/datatables.min.css" rel="stylesheet">
+  <link href="./css/custom.css" rel="stylesheet">
   <script src="./js/datatables.min.js"></script>
 </head>
 <body>
   <br>
   <h3 align="center">A1 10-6 院會出席整理</h1>
   <hr>
-  <div class="container table-responsive">
-    <table id="A1" class="table table-bordered table-hover table-sm nowrap" align="center">
+  <div class="container table-responsive" style="overflow-x: auto;">
+    <table id="A1" class="table table-bordered table-hover table-sm nowrap" align="center" width="100%">
       <thead>
         <tr>
-          <th>委員會</th>
-          <th>黨籍</th>
-          <th>姓名</th>
+          <td class="dt-head-center" rowspan="2">委員會</td>
+          <td class="dt-head-center" rowspan="2">黨籍</td>
+          <td class="dt-head-center" rowspan="2">姓名</td>
+          <td class="dt-head-center" colspan="3">第 1 次會議</td>
+          <td class="dt-head-center" colspan="3">第 2 次會議</td>
+          <td class="dt-head-center" colspan="3">第 3 次會議</td>
+          <td class="dt-head-center" colspan="3">第 4 次會議</td>
+          <td class="dt-head-center" colspan="3">第 5 次會議</td>
+          <td class="dt-head-center" colspan="3">第 6 次會議</td>
+          <td class="dt-head-center" colspan="3">第 7 次會議</td>
+          <td class="dt-head-center" colspan="3">第 8 次會議</td>
+          <td class="dt-head-center" colspan="3">第 9 次會議</td>
+          <td class="dt-head-center" colspan="3">第 10 次會議</td>
+          <td class="dt-head-center" colspan="3">第 11 次會議</td>
+          <td class="dt-head-center" colspan="3">第 12 次會議</td>
+          <td class="dt-head-center" colspan="3">第 13 次會議</td>
+          <td class="dt-head-center" colspan="3">第 14 次會議</td>
+          <td class="dt-head-center" colspan="3">第 15 次會議</td>
+          <td class="dt-head-center" colspan="3">第 16 次會議</td>
+        </tr>
+        <tr>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
         </tr>
       </thead>
       <tbody>
