Add columns 總應到次數、總出席次數、分數

--- a/A1_10-6.html
+++ b/A1_10-6.html
@@ -18,6 +18,9 @@
           <td class="dt-head-center" rowspan="2">委員會</td>
           <td class="dt-head-center" rowspan="2">黨籍</td>
           <td class="dt-head-center" rowspan="2">姓名</td>
+          <td class="dt-head-center" rowspan="2">總應到次數</td>
+          <td class="dt-head-center" rowspan="2">總出席次數</td>
+          <td class="dt-head-center" rowspan="2">分數</td>
           <td class="dt-head-center" colspan="3">第 1 次會議</td>
           <td class="dt-head-center" colspan="3">第 2 次會議</td>
           <td class="dt-head-center" colspan="3">第 3 次會議</td>
