Undo the hard coding to hide 15th, 16th meeting

--- a/A1_10-6.html
+++ b/A1_10-6.html
@@ -35,8 +35,16 @@
           <td class="dt-head-center" colspan="3">第 12 次會議</td>
           <td class="dt-head-center" colspan="3">第 13 次會議</td>
           <td class="dt-head-center" colspan="3">第 14 次會議</td>
+          <td class="dt-head-center" colspan="3">第 15 次會議</td>
+          <td class="dt-head-center" colspan="3">第 16 次會議</td>
         </tr>
         <tr>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
+          <td class="nosort">出席</td>
+          <td class="nosort">請假</td>
+          <td class="nosort">缺席</td>
           <td class="nosort">出席</td>
           <td class="nosort">請假</td>
           <td class="nosort">缺席</td>
