--- a/A1.html
+++ b/A1.html
@@ -14,79 +14,15 @@
   <div class="container table-responsive" style="overflow-x: auto;">
     <table id="A1" class="table table-bordered table-hover table-sm nowrap" align="center" width="100%">
       <thead>
-        <tr>
+        <tr class="head-row-0">
           <td class="dt-head-center" rowspan="2">委員會</td>
           <td class="dt-head-center" rowspan="2">黨籍</td>
           <td class="dt-head-center" rowspan="2">姓名</td>
           <td class="dt-head-center" rowspan="2">總應到次數</td>
           <td class="dt-head-center" rowspan="2">總出席次數</td>
           <td class="dt-head-center" rowspan="2">分數</td>
-          <td class="dt-head-center" colspan="3">第 1 次會議</td>
-          <td class="dt-head-center" colspan="3">第 2 次會議</td>
-          <td class="dt-head-center" colspan="3">第 3 次會議</td>
-          <td class="dt-head-center" colspan="3">第 4 次會議</td>
-          <td class="dt-head-center" colspan="3">第 5 次會議</td>
-          <td class="dt-head-center" colspan="3">第 6 次會議</td>
-          <td class="dt-head-center" colspan="3">第 7 次會議</td>
-          <td class="dt-head-center" colspan="3">第 8 次會議</td>
-          <td class="dt-head-center" colspan="3">第 9 次會議</td>
-          <td class="dt-head-center" colspan="3">第 10 次會議</td>
-          <td class="dt-head-center" colspan="3">第 11 次會議</td>
-          <td class="dt-head-center" colspan="3">第 12 次會議</td>
-          <td class="dt-head-center" colspan="3">第 13 次會議</td>
-          <td class="dt-head-center" colspan="3">第 14 次會議</td>
-          <td class="dt-head-center" colspan="3">第 15 次會議</td>
-          <td class="dt-head-center" colspan="3">第 16 次會議</td>
         </tr>
-        <tr>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
-          <td class="nosort">出席</td>
-          <td class="nosort">請假</td>
-          <td class="nosort">缺席</td>
+        <tr class="head-row-1">
         </tr>
       </thead>
       <tbody>
