Dynamically display page title #4

--- a/A1.html
+++ b/A1.html
@@ -2,14 +2,14 @@
 <html lang="zh-TW">
 <head>
   <meta charset="utf-8">
-  <title>ccw-assess</title>
+  <title></title>
   <link href="./css/datatables.min.css" rel="stylesheet">
   <link href="./css/custom.css" rel="stylesheet">
   <script src="./js/datatables.min.js"></script>
 </head>
 <body>
   <br>
-  <h3 align="center">A1 10-6 院會出席整理</h1>
+  <h3 id="title" align="center"></h1>
   <hr>
   <div class="container table-responsive" style="overflow-x: auto;">
     <table id="A1" class="table table-bordered table-hover table-sm nowrap" align="center" width="100%">
