--- a/A1.html
+++ b/A1.html
@@ -29,6 +29,6 @@
       </tbody>
     </table>
   </div>
-  <script src="./js/main.js"></script>
+  <script src="./js/A1_main.js"></script>
 </body>
 </html>
