--- a/index.html
+++ b/index.html
@@ -33,16 +33,9 @@
         <tr>
           <td>10</td>
           <td>6</td>
-          <td>A2</td>
-          <td>A2 10-6 各委員會出席</td>
-          <td>WIP</td>
-        </tr>
-        <tr>
-          <td>10</td>
-          <td>6</td>
-          <td>A3</td>
-          <td>A3 10-6 各委員會質詢</td>
-          <td>WIP</td>
+          <td>A2, A3</td>
+          <td>A2 A3 10-6 各委員會出席</td>
+          <td><a href="./A2_A3/35.html" target="_blank">A2_A3_10-6_外交國防委員會</td>
         </tr>
         <tr>
           <td>10</td>
