Counting attendance, and oral/written interpellation #6

--- a/A2_A3/35.html
+++ b/A2_A3/35.html
@@ -14,16 +14,19 @@
   <div class="container table-responsive" style="overflow-x: auto;">
     <table id="A2_A3" class="table table-bordered table-hover table-sm nowrap" align="center" width="100%">
       <thead>
-        <tr class="head-row-0">
-          <td class="dt-head-center">日期</td>
-          <td class="dt-head-center">會議名稱</td>
-          <td class="dt-head-center">出席</td>
-          <td class="dt-head-center">口頭</td>
-          <td class="dt-head-center">書面</td>
-          <td class="dt-head-center">請假</td>
-          <td class="dt-head-center">主席</td>
-          <td class="dt-head-center">該會議可口頭質詢之次數</td>
+        <tr id="head-row-0">
+          <td class="dt-head-center" rowspan="4">日期</td>
+          <td class="dt-head-center" rowspan="4">會議名稱</td>
+          <td class="dt-head-center" rowspan="4">出席</td>
+          <td class="dt-head-center" rowspan="4">口頭</td>
+          <td class="dt-head-center" rowspan="4">書面</td>
+          <td class="dt-head-center" rowspan="4">請假</td>
+          <td class="dt-head-center" rowspan="4">主席</td>
+          <td class="dt-head-center" id="before-point" rowspan="4">該會議可口頭質詢之次數</td>
         </tr>
+        <tr id="head-row-1"></tr>
+        <tr id="head-row-2"></tr>
+        <tr id="head-row-3"></tr>
       </thead>
       <tbody>
       </tbody>
