--- a/A2_A3/35.html
+++ b/A2_A3/35.html
@@ -2,14 +2,13 @@
 <html lang="zh-TW">
 <head>
   <meta charset="utf-8">
-  <title></title>
   <link href="../css/datatables.min.css" rel="stylesheet">
   <link href="../css/custom.css" rel="stylesheet">
   <script src="../js/datatables.min.js"></script>
 </head>
 <body>
   <br>
-  <h3 id="title" align="center"></h3>
+  <h3 id="title" align="center">A2 A3 <span class="term-session"></span> 外交及國防委員會出席及質詢</h3>
   <hr>
   <div class="container table-responsive" style="overflow-x: auto;">
     <table id="A2_A3" class="table table-bordered table-hover table-sm nowrap" align="center" width="100%">
