Initial commit of A2_A3.html(各委員會出席及質詢總表) #6

--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
           <td>A2, A3</td>
           <td>A2 A3 10-6 各委員會出席</td>
           <td>
-            <a href="./A2_A3/15.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_內政委員會</a><br>
-            <a href="./A2_A3/35.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_外交及國防委員會</a><br>
-            <a href="./A2_A3/19.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_經濟委員會</a><br>
-            <a href="./A2_A3/20.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_財政委員會</a><br>
-            <a href="./A2_A3/22.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_教育及文化委員會</a><br>
-            <a href="./A2_A3/23.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_交通委員會</a><br>
-            <a href="./A2_A3/36.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_司法及法制委員會</a><br>
-            <a href="./A2_A3/26.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_社會福利及衛生環境委員會</a>
+            <a href="./A2_A3.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_委員會總表</a><br>
+            <ul>
+              <li><a href="./A2_A3/15.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_內政委員會</a></li>
+              <li><a href="./A2_A3/35.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_外交及國防委員會</a></li>
+              <li><a href="./A2_A3/19.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_經濟委員會</a></li>
+              <li><a href="./A2_A3/20.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_財政委員會</a></li>
+              <li><a href="./A2_A3/22.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_教育及文化委員會</a>
+              <li><a href="./A2_A3/23.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_交通委員會</a></li>
+              <li><a href="./A2_A3/36.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_司法及法制委員會</a></li>
+              <li><a href="./A2_A3/26.html?term=10&sessionPeriod=6" target="_blank">A2_A3_10-6_社會福利及衛生環境委員會</a></li>
+            </ul>
           </td>
         </tr>
         <tr>
