Initial commit of A4 法案預算審查 #7

--- a/index.html
+++ b/index.html
@@ -54,20 +54,17 @@
           <td>6</td>
           <td>A4</td>
           <td>A4 10-6 法案預算審查</td>
-          <td>WIP</td>
+          <td>
+            <ul>
+              <li><a href="./A4/15.html?term=10&sessionPeriod=6">A4_10-6_內政委員會</a></li>
+            </ul>
+          </td>
         </tr>
         <tr>
           <td>10</td>
           <td>6</td>
           <td>A5</td>
           <td>A5 10-6 法律主題案</td>
-          <td>WIP</td>
-        </tr>
-        <tr>
-          <td>10</td>
-          <td>6</td>
-          <td>C9</td>
-          <td>C9 10-6 法案預算審查發言次數及字數</td>
           <td>WIP</td>
         </tr>
       </tbody>
