--- a/index.html
+++ b/index.html
@@ -56,7 +56,14 @@
           <td>A4 10-6 法案預算審查</td>
           <td>
             <ul>
-              <li><a href="./A4/15.html?term=10&sessionPeriod=6">A4_10-6_內政委員會</a></li>
+              <li><a href="./A4/15.html?term=10&sessionPeriod=6" target="_blank">A4_10-6_內政委員會</a></li>
+              <li><a href="./A4/35.html?term=10&sessionPeriod=6" target="_blank">A4_10-6_外交及國防委員會</a></li>
+              <li><a href="./A4/19.html?term=10&sessionPeriod=6" target="_blank">A4_10-6_經濟委員會</a></li>
+              <li><a href="./A4/20.html?term=10&sessionPeriod=6" target="_blank">A4_10-6_財政委員會</a></li>
+              <li><a href="./A4/22.html?term=10&sessionPeriod=6" target="_blank">A4_10-6_教育及文化委員會</a></li>
+              <li><a href="./A4/23.html?term=10&sessionPeriod=6" target="_blank">A4_10-6_交通委員會</a></li>
+              <li><a href="./A4/36.html?term=10&sessionPeriod=6" target="_blank">A4_10-6_司法及法制委員會</a></li>
+              <li><a href="./A4/26.html?term=10&sessionPeriod=6" target="_blank">A4_10-6_社會福利及衛生環境委員會</a></li>
             </ul>
           </td>
         </tr>
