Add A4.html(統計) in index.html #7

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <td>A4</td>
           <td>A4 10-6 法案預算審查</td>
           <td>
+            <a href="./A4.html?term=10&sessionPeriod=6" target="_blank">A4_10-6_統計</a>
             <ul>
               <li><a href="./A4/15.html?term=10&sessionPeriod=6" target="_blank">A4_10-6_內政委員會</a></li>
               <li><a href="./A4/35.html?term=10&sessionPeriod=6" target="_blank">A4_10-6_外交及國防委員會</a></li>
