Fix typo '題案' -> '提案' #8

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <td>A5 10-6 法律主題案</td>
           <td>
             <ul>
-              <li><a href="./A5/first.html?term=10&sessionPeriod=6" target="_blank">A5_10-6_法律主題案第一人</a></li>
+              <li><a href="./A5/first.html?term=10&sessionPeriod=6" target="_blank">A5_10-6_法律主提案第一人</a></li>
               <li><a href="./A5/non-first.html?term=10&sessionPeriod=6" target="_blank">A5_10-6_法律非主提案第一人</a></li>
             </ul>
           </td>
