--- a/A5/first.html
+++ b/A5/first.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <br>
-  <h3 id="title" align="center">A5 <span class="term-session"></span> 法律主題案第一人</h3>
+  <h3 id="title" align="center">A5 <span class="term-session"></span> 法律主提案第一人</h3>
   <hr>
   <div class="container table-responsive" style="overflow-x: auto;">
     <table id="A5" class="table table-bordered table-hover table-sm nowrap" align="center" width="100%">
@@ -16,7 +16,7 @@
         <tr id="head-row-0">
           <td class="dt-head-center" rowspan="3">提案名稱</td>
           <td class="dt-head-center" rowspan="3">提案編號</td>
-          <td class="dt-head-center" rowspan="3">主題案第一人</td>
+          <td class="dt-head-center" rowspan="3">主提案第一人</td>
         </tr>
         <tr id="head-row-1"></tr>
         <tr id="head-row-2"></tr>
