--- a/index.html
+++ b/index.html
@@ -77,18 +77,12 @@
             <ul>
               <li><a href="./A5/first.html?term=10&sessionPeriod=6" target="_blank">A5_10-6_法律主提案第一人</a></li>
               <li><a href="./A5/non-first.html?term=10&sessionPeriod=6" target="_blank">A5_10-6_法律非主提案第一人</a></li>
+              <li><a href="./A5/partygroups.html?term=10&sessionPeriod=6" target="_blank">A5_10-6_各黨團提案</a></li>
             </ul>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
-<!--  <script>
-    $(document).ready(function() {
-      $('#index').DataTable({
-        keys: true,
-      });
-    });
-  </script>-->
 </body>
 </html>
