Search and print merge-like bills (same law, same organic law) #8

--- a/A5/merge_first.html
+++ b/A5/merge_first.html
@@ -14,15 +14,14 @@
     <table id="A5" class="table table-bordered table-hover table-sm nowrap" align="center" width="100%">
       <thead>
         <tr id="head-row-0">
-          <td class="dt-head-center" rowspan="3">併案編號</td>
-          <td class="dt-head-center" rowspan="3">提案日期</td>
-          <td class="dt-head-center" rowspan="3">提案名稱</td>
-          <td class="dt-head-center" rowspan="3">提案編號</td>
-          <td class="dt-head-center" rowspan="3">主提案第一人</td>
-          <td class="dt-head-center" rowspan="3">備註</td>
+          <td class="dt-head-center nosort">併案編號</td>
+          <td class="dt-head-center nosort">提案日期</td>
+          <td class="dt-head-center nosort">提案名稱</td>
+          <td class="dt-head-center nosort">提案編號</td>
+          <td class="dt-head-center nosort">主提案第一人</td>
+          <td class="dt-head-center nosort">主提案非第一人</td>
+          <td class="dt-head-center nosort">備註</td>
         </tr>
-        <tr id="head-row-1"></tr>
-        <tr id="head-row-2"></tr>
       </thead>
       <tbody>
       </tbody>
