Rename title of merge_first.html #8

--- a/A5/merge_first.html
+++ b/A5/merge_first.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <br>
-  <h3 id="title" align="center">A5 <span class="term-session"></span> 併案表（主提案第一人）</h3>
+  <h3 id="title" align="center">A5 <span class="term-session"></span> 併案檢查表</h3>
   <hr>
   <div class="container table-responsive" style="overflow-x: auto;">
     <table id="A5" class="table table-bordered table-hover table-sm nowrap" align="center" width="100%">
