Rename table from 'A5/merge_first' to 'A5/merge' #8

--- a/A5/merge.html
+++ b/A5/merge.html
@@ -27,6 +27,6 @@
       </tbody>
     </table>
   </div>
-  <script src="../js/A5/merge_first_main.js"></script>
+  <script src="../js/A5/merge_main.js"></script>
 </body>
 </html>
