Add <select> for choosing term and sessionPeriod #9

--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
   <h3 align="center">立委評鑑 Legislators Evaluation</h1>
   <h6 align="center">Various statistics of legislators evaluation from Citizen Congress Watch powered by <a href="https://ly.govapi.tw">ly.govapi.tw</a></h6>
   <hr>
+    <div class="container" align="center">
+      <label for="term">屆期:</label>
+      <select name="term" id="term"></select>
+      <label for="sessionPeriod">會期:</label>
+      <select name="sessionPeriod" id="sessionPeriod">
+        <option value="" disabled>---請選擇會期---</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+      </select>
+    </div>
+  <hr>
   <div class="container table-responsive">
     <table id="index" class="table table-bordered table-hover table-sm nowrap" align="center">
       <thead>
