Center table and shorten the text description in cells #9

--- a/index.html
+++ b/index.html
@@ -43,55 +43,55 @@
           <tbody>
             <tr>
               <td class="text-center align-middle">A1</td>
-              <td class="text-center align-middle">A1 院會出席整理</td>
+              <td class="text-center align-middle">院會出席整理</td>
               <td>
-                <a class="sheet" href="./A1.html" target="_blank">A1_<span></span></a>
+                <a class="sheet" href="./A1.html" target="_blank"><span></span></a>
               </td>
             </tr>
             <tr>
               <td class="text-center align-middle">A2, A3</td>
-              <td class="text-center align-middle">A2 A3 各委員會出席</td>
+              <td class="text-center align-middle">各委員會出席</td>
               <td>
-                <a class="sheet" href="./A2_A3.html" target="_blank">A2_A3_<span></span>_委員會總表</a><br>
+                <a class="sheet" href="./A2_A3.html" target="_blank"><span></span>_委員會總表</a>
                 <ul>
-                  <li><a class="sheet" href="./A2_A3/15.html" target="_blank">A2_A3_<span></span>_內政委員會</a></li>
-                  <li><a class="sheet" href="./A2_A3/35.html" target="_blank">A2_A3_<span></span>_外交及國防委員會</a></li>
-                  <li><a class="sheet" href="./A2_A3/19.html" target="_blank">A2_A3_<span></span>_經濟委員會</a></li>
-                  <li><a class="sheet" href="./A2_A3/20.html" target="_blank">A2_A3_<span></span>_財政委員會</a></li>
-                  <li><a class="sheet" href="./A2_A3/22.html" target="_blank">A2_A3_<span></span>_教育及文化委員會</a>
-                  <li><a class="sheet" href="./A2_A3/23.html" target="_blank">A2_A3_<span></span>_交通委員會</a></li>
-                  <li><a class="sheet" href="./A2_A3/36.html" target="_blank">A2_A3_<span></span>_司法及法制委員會</a></li>
-                  <li><a class="sheet" href="./A2_A3/26.html" target="_blank">A2_A3_<span></span>_社會福利及衛生環境委員會</a></li>
+                  <li><a class="sheet" href="./A2_A3/15.html" target="_blank"><span></span>_內政委員會</a></li>
+                  <li><a class="sheet" href="./A2_A3/35.html" target="_blank"><span></span>_外交及國防委員會</a></li>
+                  <li><a class="sheet" href="./A2_A3/19.html" target="_blank"><span></span>_經濟委員會</a></li>
+                  <li><a class="sheet" href="./A2_A3/20.html" target="_blank"><span></span>_財政委員會</a></li>
+                  <li><a class="sheet" href="./A2_A3/22.html" target="_blank"><span></span>_教育及文化委員會</a></li>
+                  <li><a class="sheet" href="./A2_A3/23.html" target="_blank"><span></span>_交通委員會</a></li>
+                  <li><a class="sheet" href="./A2_A3/36.html" target="_blank"><span></span>_司法及法制委員會</a></li>
+                  <li><a class="sheet" href="./A2_A3/26.html" target="_blank"><span></span>_社會福利及衛生環境委員會</a></li>
                 </ul>
               </td>
             </tr>
             <tr>
               <td class="text-center align-middle">A4</td>
-              <td class="text-center align-middle">A4 法案預算審查</td>
+              <td class="text-center align-middle">法案預算審查</td>
               <td>
-                <a class="sheet" href="./A4.html" target="_blank">A4_<span></span>_統計</a>
+                <a class="sheet" href="./A4.html" target="_blank"><span></span>_統計</a>
                 <ul>
-                  <li><a class="sheet" href="./A4/15.html" target="_blank">A4_<span></span>_內政委員會</a></li>
-                  <li><a class="sheet" href="./A4/35.html" target="_blank">A4_<span></span>_外交及國防委員會</a></li>
-                  <li><a class="sheet" href="./A4/19.html" target="_blank">A4_<span></span>_經濟委員會</a></li>
-                  <li><a class="sheet" href="./A4/20.html" target="_blank">A4_<span></span>_財政委員會</a></li>
-                  <li><a class="sheet" href="./A4/22.html" target="_blank">A4_<span></span>_教育及文化委員會</a></li>
-                  <li><a class="sheet" href="./A4/23.html" target="_blank">A4_<span></span>_交通委員會</a></li>
-                  <li><a class="sheet" href="./A4/36.html" target="_blank">A4_<span></span>_司法及法制委員會</a></li>
-                  <li><a class="sheet" href="./A4/26.html" target="_blank">A4_<span></span>_社會福利及衛生環境委員會</a></li>
+                  <li><a class="sheet" href="./A4/15.html" target="_blank"><span></span>_內政委員會</a></li>
+                  <li><a class="sheet" href="./A4/35.html" target="_blank"><span></span>_外交及國防委員會</a></li>
+                  <li><a class="sheet" href="./A4/19.html" target="_blank"><span></span>_經濟委員會</a></li>
+                  <li><a class="sheet" href="./A4/20.html" target="_blank"><span></span>_財政委員會</a></li>
+                  <li><a class="sheet" href="./A4/22.html" target="_blank"><span></span>_教育及文化委員會</a></li>
+                  <li><a class="sheet" href="./A4/23.html" target="_blank"><span></span>_交通委員會</a></li>
+                  <li><a class="sheet" href="./A4/36.html" target="_blank"><span></span>_司法及法制委員會</a></li>
+                  <li><a class="sheet" href="./A4/26.html" target="_blank"><span></span>_社會福利及衛生環境委員會</a></li>
                 </ul>
               </td>
             </tr>
             <tr>
               <td class="text-center align-middle">A5</td>
-              <td class="text-center align-middle">A5 法律主提案</td>
+              <td class="text-center align-middle">法律主提案</td>
               <td>
-                <a class="sheet" href="./A5.html" target="_blank">A5_<span></span>_法律提案筆數</a>
+                <a class="sheet" href="./A5.html" target="_blank"><span></span>_法律提案筆數</a>
                 <ul>
-                  <li><a class="sheet" href="./A5/first.html" target="_blank">A5_<span></span>_法律主提案第一人</a></li>
-                  <li><a class="sheet" href="./A5/non-first.html" target="_blank">A5_<span></span>_法律非主提案第一人</a></li>
-                  <li><a class="sheet" href="./A5/partygroups.html" target="_blank">A5_<span></span>_各黨團提案</a></li>
-                  <li><a class="sheet" href="./A5/merge.html" target="_blank">A5_<span></span>_併案檢查表</a></li>
+                  <li><a class="sheet" href="./A5/first.html" target="_blank"><span></span>_法律主提案第一人</a></li>
+                  <li><a class="sheet" href="./A5/non-first.html" target="_blank"><span></span>_法律非主提案第一人</a></li>
+                  <li><a class="sheet" href="./A5/partygroups.html" target="_blank"><span></span>_各黨團提案</a></li>
+                  <li><a class="sheet" href="./A5/merge.html" target="_blank"><span></span>_併案檢查表</a></li>
                 </ul>
               </td>
             </tr>
