Change html title to legislator-assess

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
   <meta charset="utf-8">
-  <title>ccw-assess</title>
+  <title>legislator-assess</title>
   <link href="./css/datatables.min.css" rel="stylesheet">
   <script src="./js/datatables.min.js"></script>
 </head>
