--- a/A2_A3/15.html
+++ b/A2_A3/15.html
@@ -31,6 +31,7 @@
       </tbody>
     </table>
   </div>
+  <script src="../js/A2_A3_utils.js"></script>
   <script src="../js/A2_A3/main.js"></script>
 </body>
 </html>
